--- a/headers.css
+++ b/headers.css
@@ -323,17 +323,21 @@ body {
     border: 0px solid white;
     color: white;
     background-color: black;
-    border-radius: 3px;
+    border-radius: 10px;
 }
 #SearchDiv5 {
     display: flex;
-    padding: 5px;
+    width: 352px;
+    height: 41px;
     border: 1px solid rgb(235, 235, 235);
-    border-radius: 3px;
+    border-radius: 10px;
     align-content: center;
+    align-items: center;
 }
 #input5 {
     border:0;
+    margin-left: 15px;
+    height: 16px;
     font-family: 'Inter';
 }
 /* header 6 */
@@ -391,7 +395,7 @@ body {
     height: 40px;
     border: 0px solid rgba(255,255,255,0);
     background-color: rgb(235, 235, 235);
-    border-radius: 3px;
+    border-radius: 7px;
 }
 #GetStarted6 {
     font-family: 'Inter';
@@ -401,7 +405,7 @@ body {
     border: 0px solid rgba(255,255,255,0);
     color: white;
     background-color: rgb(92, 83, 233);
-    border-radius: 3px;
+    border-radius: 7px;
 }
 .buttonPicture6 {
     flex-basis: 20px;
@@ -546,7 +550,7 @@ body {
     padding: 5px;
     margin-left: 20px;
     border: 1px solid white;
-    border-radius: 3px;
+    border-radius: 10px;
     align-content: center;
     justify-content: space-between;
 }
@@ -554,4 +558,13 @@ body {
     border:0;
     font-family: 'Inter';
     background-color: black;
+    margin-left: 4px;
+    width: 100%;
+}
+#input9::placeholder {
+    color:white
+}
+#input9:focus {
+    border: 0px;
+    outline: none;
 }
