--- a/Cards.css
+++ b/Cards.css
@@ -59,20 +59,19 @@ body {
     display:flex;
     font-family: 'Inter';
     background-color: rgb(169, 222, 195);
-    width: 175px;
-    height: 365px;
-    flex-wrap: wrap;
     justify-content: center;
-    align-content: space-between;
+    width: 350px;
+    height: 730px;
+    flex-wrap: wrap;
 }
 #text2 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    width: 310px;
+    flex-direction: column;
 }
 #Amure2 {
     margin-top: 8px;
-    width: 155px;
 }
 .NameOfAuthor {
     font-size: 10px;
@@ -96,7 +95,7 @@ body {
 .divBuy {
     font-family: 'Inter';
     width: 100%;
-    height: 32.5px;
+    height: 30%;
     background-color: rgb(169, 222, 195);
     border: 1px solid rgb(89, 148, 116);
 }
@@ -105,6 +104,7 @@ body {
     height: 100%;
     background-color: rgba(0, 0, 0, 0);
     border:0;
+    font-size: 100%;
     color: rgb(89, 148, 116);
 }
 /* Card 3 */
@@ -114,19 +114,30 @@ body {
     background-color: white;
     border-radius:10px;
     width: 360px;
+    height: 610px;
+    display: flex;
+    flex-direction: column;
     margin-top: 10px;
 }
 #content3 {
     padding: 10px;
-    padding-top: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-grow: 1;
 }
 #title3 {
     color: rgb(20, 175, 235);
+    margin: 0;
+    font-size: 22px;
 }
 #authorSection3 {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+}
+#text3 {
+    margin: 0;
+    font-size: 17px;
 }
 #authorInfo3 {
     display: flex;
@@ -157,10 +168,17 @@ body {
     background-color: white;
     font-family: 'Inter';
     border-radius:10px;
+    display: flex;
+    flex-direction: column;
     width: 380px;
+    height: 582px;
 }
 #content4 {
     padding: 40px 25px 40px 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-grow: 1;
 }
 #title4 {
     margin:0;
@@ -168,11 +186,13 @@ body {
 }
 #descripe4 {
     margin: 2px 0px 2px 0px;
-    font-size: 14px;
+    font-size: 17px;
+    width: 75%;
 }
 #price4 {
     margin-bottom: 20px;
-    margin-top: 30px;
+    margin-top: 20px;
+    font-size: 25px;
 }
 #buy4 {
     background-color: rgb(255, 200, 0);
@@ -213,20 +233,19 @@ body {
     display:flex;
     font-family: 'Inter';
     background-color: rgb(169, 222, 195);
-    width: 160px;
-    height: 335px;
+    width: 290px;
+    height: 514px;
     flex-wrap: wrap;
     justify-content: center;
-    align-content: space-between;
 }
 #text6 {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: flex-start;
 }
 #Amure6 {
     margin-top: 8px;
-    width: 140px;
+    width: 250px;
 }
 /* Card 7 */
 #card7 {
@@ -234,10 +253,17 @@ body {
     background-color: white;
     font-family: 'Inter';
     border-radius:10px;
+    display: flex;
+    flex-direction: column;
     width: 380px;
+    height: 582px;
 }
 #content7 {
     padding: 40px 25px 40px 25px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    justify-content: space-around;
 }
 #title7 {
     margin:0;
@@ -245,11 +271,13 @@ body {
 }
 #descripe7 {
     margin: 2px 0px 2px 0px;
-    font-size: 14px;
+    font-size: 17px;
+    width: 75%;
 }
 #price7 {
     margin-bottom: 20px;
-    margin-top: 30px;
+    margin-top: 20px;
+    font-size: 25px;
 }
 #buy7 {
     background-color: rgb(255, 200, 0);
@@ -264,7 +292,9 @@ body {
     margin-top: 10px;
     background-color: rgb(2, 0, 28);
     width: 330px;
+    height: 400px;
     font-family: 'Inter';
+    font-size: 21px;
     border-radius:10px;
     padding: 20px 20px 40px 20px;
 }
