--- a/Menu.css
+++ b/Menu.css
@@ -8,6 +8,8 @@
     justify-content: center;
 }
 .card {
+    border: solid 1px rgb(242, 242, 242);
+    border-radius: 10px;
     margin-top: 10px;
     background-color: white;
     font-family: 'Inter';
